[Fix]: cambios en la funcionalidad de los endpoints para manejo de book "/ratings" para combinación de filtrados
